--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@material-ui/styles": "^4.4.1",
         "d3": "^5.12.0",
         "d3-interpolate-path": "^2.1.1",
+        "normalize.css": "^8.0.1",
         "prop-types": "^15.7.2",
         "react": "^16.9.0",
         "react-dom": "^16.9.0",
