--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "private": true,
     "dependencies": {
         "@material-ui/core": "^4.4.2",
+        "@material-ui/icons": "^4.4.1",
+        "@material-ui/lab": "^4.0.0-alpha.26",
         "@material-ui/styles": "^4.4.1",
         "d3": "^5.12.0",
         "d3-interpolate-path": "^2.1.1",
@@ -11,9 +13,15 @@
         "prop-types": "^15.7.2",
         "react": "^16.9.0",
         "react-dom": "^16.9.0",
+        "react-helmet": "^5.2.1",
         "react-redux": "^7.1.1",
         "react-scripts": "3.1.2",
-        "redux-thunk": "^2.3.0"
+        "redux-thunk": "^2.3.0",
+        "typeface-lusitana": "0.0.72",
+        "typeface-raleway": "0.0.75",
+        "typeface-roboto": "0.0.75",
+        "typography": "^0.16.19",
+        "typography-theme-lawton": "^0.16.19"
     },
     "scripts": {
         "start": "react-scripts start",
