--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "react-helmet": "^5.2.1",
         "react-redux": "^7.1.1",
         "react-scripts": "3.1.2",
+        "redux": "^4.0.4",
         "redux-thunk": "^2.3.0",
         "typeface-lusitana": "0.0.72",
         "typeface-raleway": "0.0.75",
@@ -43,5 +44,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "redux-devtools-extension": "^2.13.8"
     }
 }
