--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
         "@material-ui/icons": "^4.4.1",
         "@material-ui/lab": "^4.0.0-alpha.26",
         "@material-ui/styles": "^4.4.1",
+        "axios": "^0.19.0",
         "d3": "^5.12.0",
         "d3-interpolate-path": "^2.1.1",
+        "lodash": "^4.17.15",
         "normalize.css": "^8.0.1",
         "prop-types": "^15.7.2",
         "react": "^16.9.0",
