--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "d3": "^5.12.0",
         "d3-interpolate-path": "^2.1.1",
         "lodash": "^4.17.15",
+        "mui-layout": "^1.2.9",
         "normalize.css": "^8.0.1",
         "prop-types": "^15.7.2",
         "react": "^16.9.0",
