--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "axios": "^0.19.0",
         "d3": "^5.12.0",
         "d3-interpolate-path": "^2.1.1",
+        "d3-transition": "^1.2.0",
         "lodash": "^4.17.15",
         "moment": "^2.24.0",
         "normalize.css": "^8.0.1",
