--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react-scripts": "3.1.2",
         "redux": "^4.0.4",
         "redux-thunk": "^2.3.0",
+        "typeface-lato": "0.0.75",
         "typeface-lusitana": "0.0.72",
         "typeface-raleway": "0.0.75",
         "typeface-roboto": "0.0.75",
