--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@material-ui/lab": "^4.0.0-alpha.26",
         "@material-ui/styles": "^4.4.1",
         "axios": "^0.19.0",
+        "cryptocurrency-icons": "^0.16.1",
         "currency-formatter": "^1.5.5",
         "d3": "^5.12.0",
         "d3-interpolate-path": "^2.1.1",
